kind/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /data/employee  # TODO: I need to change it dynamically
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
      - path: /data/project  # TODO: I need to change it dynamically
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
